# acadwrite

./: .env.example  .gitignore  AGENT_TODO_LIST.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  FILEINTEL_API_VERIFIED.md  QUICK_REFERENCE.md  README.md  api_specifications.md  development_roadmap.md  implementation_guide.md  pyproject.toml
acadwrite/: __main__.py  __version__.py  cli.py  config.py
acadwrite/models/: __init__.py  outline.py  query.py  section.py
acadwrite/services/: __init__.py  fileintel.py  formatter.py  llm.py
acadwrite/workflows/: __init__.py  chapter_processor.py  citation_manager.py  counterargument.py  document_processor.py  markdown_chunker.py  marker_expander.py  marker_parser.py  section_generator.py
examples/: EDITOR_INTEGRATION_GUIDE.md  MARKER_EXPANSION_GUIDE.md  README.md  config.example.yaml  sample_paper_with_markers.md
examples/outlines/: chapter_outline.yaml  simple_outline.md
tests/integration/: __init__.py  conftest.py  test_chapter_processor_integration.py  test_citation_manager_integration.py  test_counterargument_integration.py  test_document_processor_integration.py  test_end_to_end.py  test_fileintel_integration.py  test_marker_expansion_integration.py  test_section_generator_integration.py
tests/unit/: test_chapter_processor.py  test_citation_manager.py  test_counterargument.py  test_document_processor.py  test_fileintel_client.py  test_formatters.py  test_llm_client.py  test_markdown_chunker.py  test_marker_parser.py  test_models.py  test_section_generator.py
